# tellm

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/tellm-anthropic/: Cargo.toml
crates/tellm-anthropic/src/: lib.rs
crates/tellm-anthropic/tests/: chat.rs
crates/tellm-anthropic/tests/support/: mod.rs
crates/tellm-compat/: Cargo.toml
crates/tellm-compat/src/: lib.rs
crates/tellm-compat/tests/: chat.rs
crates/tellm-compat/tests/support/: mod.rs
crates/tellm-config/: Cargo.toml
crates/tellm-config/src/: lib.rs
crates/tellm-config/tests/: keychain.rs
crates/tellm-core/: Cargo.toml
crates/tellm-core/src/: lib.rs
crates/tellm-gemini/: Cargo.toml
crates/tellm-gemini/src/: lib.rs
crates/tellm-gemini/tests/: chat.rs
crates/tellm-gemini/tests/support/: mod.rs
crates/tellm-openai/: Cargo.toml
crates/tellm-openai/src/: lib.rs
crates/tellm-openai/tests/: chat.rs
crates/tellm-openai/tests/support/: mod.rs
crates/tellm-telegram/: Cargo.toml
crates/tellm-telegram/src/: lib.rs
crates/tellm-telegram/tests/: golden.rs  http.rs
crates/tellm-telegram/tests/golden/: chunk_text.json  generate_vectors.py  markdown_to_html.json
crates/tellm-telegram/tests/support/: mod.rs
crates/tellm-test-support/: Cargo.toml
crates/tellm-test-support/src/: lib.rs
src/: access.rs  commands.rs  console.rs  main.rs  rooms.rs  runtime.rs  wizard.rs
