[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amidabuddha/tellm"
authors = ["Stefan"]
# Floor set by let-chains, stabilized in 1.88 for edition 2024.
rust-version = "1.88"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2.5"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
libc = "0.2"
dirs = "6"
# Checked 2026-07-05 against keyring 4.1.3: its v1 wrapper does not register
# the default store, so tellm uses keyring-core plus platform stores directly.
keyring-core = "1.0.0"
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
windows-native-keyring-store = "1.1.0"
# secret-service requires picking a runtime + crypto feature. async-io keeps
# the store independent of tellm's tokio runtime (the secret facade is sync,
# called at startup and from spawn_blocking); rust crypto avoids OpenSSL
# linkage per the distribution rule.
zbus-secret-service-keyring-store = { version = "1.0.0", features = [
    "rt-async-io-crypto-rust",
] }
getrandom = "0.3"
rpassword = "7"
base64 = "0.22"
log = "0.4"

tellm-core = { path = "crates/tellm-core" }
tellm-telegram = { path = "crates/tellm-telegram" }
tellm-config = { path = "crates/tellm-config" }
tellm-anthropic = { path = "crates/tellm-anthropic" }
tellm-openai = { path = "crates/tellm-openai" }
tellm-compat = { path = "crates/tellm-compat" }
tellm-gemini = { path = "crates/tellm-gemini" }
tellm-test-support = { path = "crates/tellm-test-support" }

[package]
name = "tellm"
description = "Your own multi-model AI assistant in Telegram. Bring your API keys. Usage billed directly by your providers."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tellm-core.workspace = true
tellm-telegram.workspace = true
tellm-config.workspace = true
tellm-anthropic.workspace = true
tellm-openai.workspace = true
tellm-compat.workspace = true
tellm-gemini.workspace = true
tokio.workspace = true
rpassword.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
getrandom.workspace = true
libc.workspace = true
log.workspace = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
