[package]
name = "tellm-compat"
description = "OpenAI chat-completions-compatible client for tellm (Ollama, DeepSeek, OpenRouter, any compatible endpoint)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tellm-core.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
