[package]
name = "tellm-core"
description = "Unified request/response model and the Provider trait shared by all tellm wire-format crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
