[package]
name = "tellm-openai"
description = "OpenAI Responses API client for tellm (OpenAI, xAI, and Meta models)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tellm-core.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true

[dev-dependencies]
tellm-test-support.workspace = true
tokio.workspace = true
