[package]
name = "tellm-telegram"
description = "Minimal Telegram Bot API client: long polling, delivery fallback chain, chunking, markdown-to-HTML"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
log.workspace = true

[dev-dependencies]
tokio.workspace = true
