[package]
name = "tellm-test-support"
description = "Shared integration-test support for tellm provider crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde_json.workspace = true
